@@ -78,7 +78,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.020001
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.020003
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -201,6 +201,9 @@ Dist::Zilla::Plugin::UploadToCPAN = 0
 
 [Prereqs / TestRequires]
 Dist::Zilla::Plugin::OptionalFeature = 0
+
+[Prereqs / TestRecommends]
+Dist::Zilla = 5.020
 
 [Prereqs::Soften]
 copy_to = develop.requires
