@@ -1,6 +1,11 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.005001
+ [Added / test recommends]
+ - Dist::Zilla 5.020
+
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.020001 → 2.020003
 
 0.005000 2014-09-10T22:29:32Z
  [Added / develop requires]
