@@ -1,6 +1,13 @@
 Release history for Dist-Zilla-Plugin-Prereqs-Soften
 
 {{$NEXT}}
+ [Bugfix]
+ - Dont fail with newer OptionalFaetures due to test subsequently needing a Makefile.PL to work
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.005000, see misc/*.deps* for details
+ - develop: (suggests: ↑1)
+ - test: (recommends: +1)
 
 0.005000 2014-09-10T22:29:32Z
  [00 Minor]
